--- a/css/custom.css
+++ b/css/custom.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-body { font-family: 'Lato', sans-serif; font-size:16px; background-color: #505050; }
+body { font-family: 'Lato', sans-serif; font-size:16px; background-color: blue; }
 
 #topPanel { margin:0; position:relative; }
 
@@ -12,7 +12,7 @@ body { font-family: 'Lato', sans-serif; font-size:16px; background-color: #50505
 
 .sidebarC { 
     background-color:#505050; 
-    color: white;
+    color: white; 
     position:relative;
 }
 
@@ -39,17 +39,17 @@ body { font-family: 'Lato', sans-serif; font-size:16px; background-color: #50505
 .yellowBoxNav {
     position:relative;
     display:inline-block;
-    /*float:right;*/
+    float:right;
     margin-right:30px;
     text-align: center;
     vertical-align: middle;
     cursor: pointer;
-    background-color:#f3d83f;
+    background-color:white;
     top: 50%;
     transform: translateY(-50%);
     width: 55px;
     height: 45px;
-    color:white;
+    color:#f3d83f;
     z-index: 25;
 }
 
